# norminette

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  autoupdate.sh  debug.sh  install.sh  norm  norminette  update.sh
include/: aut.h  fcts.h  functions.h  global.h  global2.h  global3.h  macros.h  my.h  stacktrace.h  structs.h
lib/my/: Makefile
lib/my/includes/: flags.h  macro.h
lib/my/sources/: compare_strings.c  convert_base.c  disp.c  get_nbrlen.c  my_compute_power_rec.c  my_compute_power_rec_long.c  my_compute_square_root.c  my_find_prime_supp.c  my_getnbr.c  my_getnbr_base.c  my_is_prime.c  my_isneg.c  my_printf.c  my_put_nbr.c  my_put_nbr_unsigned.c  my_putbase.c  my_putchar.c  my_putchar_stderr.c  my_putfloat.c  my_putnbr_base.c  my_putstar.c  my_putstr.c  my_putstr_stderr.c  my_revstr.c  my_showmem.c  my_showstr.c  my_sort_int_array.c  my_str_isalpha.c  my_str_islower.c  my_str_isnum.c  my_str_isprintable.c  my_str_isupper.c  my_strcapitalize.c  my_strcat.c  my_strcmp.c  my_strcpy.c  my_strdup.c  my_strlen.c  my_strlen_rec.c  my_strlowcase.c  (+9 more)
src/: catch_sig.c  codes.h  compare_strings.c  concat.c  display_cappuccino.c  double_to_str.c  flags.c  free_list.c  get_env_vars.c  get_nbrlen.c  int_to_str.c  load_functions.c  long_to_str.c  main.c  my_malloc.c  my_putnbr_base.c  my_showstr.c  scan.c  scan_file.c  stacktrace.c  sub_strings.c
src/args_management/: args.c  args.h  handlers.c  handlers.h  help.c  help.h  update.c  update.h
src/checker/: checker.c  checker.h  convert_state.c  convert_state.h  get_source_type.c  get_source_type.h  is_file_useless.c  is_file_useless.h  recap.c  recap.h
src/checker/check_makefile/: check_makefile.c  check_makefile.h
src/checker/check_sources/: check_header.c  check_header.h  check_source.c  check_source.h
src/checker/check_sources/file_checker/: check_c_file.c  check_c_file.h
src/checker/check_sources/file_checker/checkers/: check_function_declaration.c  check_function_declaration.h  state.h
src/data/: style_errors.c  style_errors.h
src/output/: color.c  color.h  debug.c  debug.h  easter_eggs.h  error_reporting.c  error_reporting.h
src/output/error_reporting/: display_error_start.c  display_style_error.c  display_style_error.h  error_reporting.c
src/utils/: alloc.c  alloc.h  assert.h  concat.c  concat.h  exceptions.c  exceptions.h  file_types.c  file_types.h  files.h  is_in_list.c  is_in_list.h  regex.c  regex.h
src/utils/exceptions/: alloc.c  exceptions.c  terminate.c  throw.c
src/utils/files/: file_types.c  get_file_length.c
tests/: F4.c  L3.c  Makefile  indent.c  lignes.c  solving.c  trailing_spaces.c
